# table_plane_extractor

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  package.xml  requirements.txt
config/: config.yaml  config_get_obj_on_table_as.yaml
launch/: get_objects_on_table.launch  get_objects_on_table_as.launch  get_objects_on_table_vis.launch  table_objects_extractor.launch  table_objects_extractor_as.launch  table_plane_extractor.launch
src/: extractor_of_table_objects.py  extractor_of_table_planes.py  get_objects_on_table.py  get_objects_on_table_as.py  get_objects_on_table_test.py  objects_on_table_vis.py  table_objects_extractor_as.py  table_objects_extractor_as_testscript.py  table_objects_extractor_srv.py  table_objects_extractor_testscript.py  table_plane_extractor_srv.py  test_plane.py  util.py
src/testscripts/: table_objects_extractor_as_testscript.py  table_objects_extractor_testscript.py  table_plane_extractor_testscript.py
srv/: GetBBOfObjectsOnTable.srv  GetPCOfObjectsOnTable.srv  TablePlaneExtractor.srv
